<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title=""
            android:elevation="4dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/toolbarBackgroundColor">

            <!--  <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/logo"/>-->

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="BIBLIOTECA ISLÂMICA"
                android:textColor="#000" />
            <!--            <ImageView
                            android:id="@+id/search"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_search_black"
                            />-->


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_internet_connection"/>

   <!-- <ImageView
        android:id="@+id/refresh"
        android:layout_below="@id/connection"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:src="@drawable/ic_refresh"/>-->

    <com.maktabat.al.huda.customviews.CustomSwipeToRefresh
        android:id="@+id/swiperefresh_items"
        android:layout_width="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingBottom="25dp"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            custom:pager_animation="Accordion"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation_span="1100"
            android:paddingBottom="30dp"
            android:layout_height="220dp"/>

        <!--New books-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_books"
            android:layout_alignParentStart="true"
            android:paddingStart="14.5dp"
            android:textColor="@color/recyclerview_title_color"
            android:textAllCaps="true"
            android:textSize="15.5sp" />

            <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
                android:id="@+id/viewmore_newbooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more"
                android:paddingEnd="10.5dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/grey"
                android:textSize="10.5sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/new_books_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="22dp"
            android:textColor="@color/grey"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/newbooks_recycleview"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4.5dp"
            android:paddingTop="10dp"/>

        <!--Recommended books-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended"
                android:layout_alignParentStart="true"
                android:paddingStart="14.5dp"
                android:textColor="@color/recyclerview_title_color"
                android:textAllCaps="true"
                android:textSize="15.5sp" />


            <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
                android:id="@+id/viewmore_recommendedbooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more"
                android:paddingEnd="10.5dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/grey"
                android:textSize="10.5sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/recom_books_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="22dp"
            android:textColor="@color/grey"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recommended_recycleview"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14.5dp"
            android:paddingTop="20dp"/>

        <!--Recommended books-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:layout_alignParentStart="true"
                android:paddingStart="14.5dp"
                android:textColor="@color/recyclerview_title_color"
                android:textAllCaps="true"
                android:textSize="15.5sp" />


            <com.maktabat.al.huda.customfonts.MyTextView_Ubuntu_Bold
                android:id="@+id/viewmore_popularbooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more"
                android:paddingEnd="10.5dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/grey"
                android:textSize="10.5sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/popular_books_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="22dp"
            android:textColor="@color/grey"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_recycleview"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14.5dp"
            android:paddingTop="20dp"/>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    </com.maktabat.al.huda.customviews.CustomSwipeToRefresh>

</RelativeLayout>